--- a/front-end/src/pages/Login/login.css
+++ b/front-end/src/pages/Login/login.css
@@ -12,7 +12,7 @@
   transition: all 2s ease;
 }
 
-.container{
+.login-container{
   display: flex;
   flex-direction: column;
   background-color: #fff;
