--- a/front-end/src/pages/Login/login.css
+++ b/front-end/src/pages/Login/login.css
@@ -22,5 +22,65 @@
   box-shadow: 0px 4px 4px 3px rgba(0, 0, 0, 0.31);
 }
 
+.login-container h1{
+  margin: 2rem 2.5rem 0;
+}
+
+.input-area{
+  display: flex;
+  flex-direction: column;
+  margin: 1em 2.5em;
+}
+
+.btn-primary{
+  margin: 10px 0 0 ;
+}
+
+
+.btn-pink{
+  background-color: var(--rosa);
+  border: none;
+  border-radius: 5px;
+  height: 38px;
+  color: #fff;
+  transition: 0.2s all;
+  margin: 6px 0 ;
+
+}
+
+.btn-pink:hover{
+  background-color: #dd2f72;
+}
+
+.btn-social-area {
+  margin: 0 2.5em;
+}
+
+.facebook-btn{
+  margin:0 2em 0 0;
+  background-color: #4267B2;
+  transition: 0.2s all;
+}
+
+.facebook-btn:hover{
+  background-color: #3b5996;
+}
+
+.google-btn{
+  background-color: #dc3545;
+  transition: 0.2s all;
+}
+
+.google-btn:hover{
+  background-color: #b82d3b;
+}
+
+.btn-social-area button{
+  width: 193px;
+  height: 53px;
+  border: none;
+  border-radius: 5px;
+    
+}
 
 
