--- a/front-end/src/components/Card/card.css
+++ b/front-end/src/components/Card/card.css
@@ -6,7 +6,7 @@
     background-color: #DBD4D3;
     color: #152536;
     overflow-wrap: normal;
-    box-shadow: 0px 0px 2px 1px #888888;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .card__image{
