--- a/front-end/src/components/ListaDeMusicas/listaDeMusica.css
+++ b/front-end/src/components/ListaDeMusicas/listaDeMusica.css
@@ -1,22 +1,7 @@
 
 .lista__musicas{
     overflow-x: hidden;
-}
-
-.list-group-horizontal{
-    display: flex;
-    flex-wrap: nowrap;
-}
-
-.list-group-horizontal li{
-    display: inline-block;
-    width: 10%;
-    margin-right: 1rem;
-    min-width: 90px;
-}
-
-.list-group-horizontal:last-child{
-    margin-right: 0;
+    margin-top: 1.5rem;
 }
 
 .tituloDaLista{
@@ -24,3 +9,21 @@
     font-weight: 500;
     margin-left: 30px;
 }
+
+.list-group-horizontal{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-top: .5rem;
+}
+
+.item__musica{
+    display: inline-block;
+    width: 10%;
+    margin-right: 2rem;
+    min-width: 120px;
+}
+
+.list-group-horizontal:last-child{
+    margin-right: 0;
+}
+
