--- a/front-end/src/components/Card/card.css
+++ b/front-end/src/components/Card/card.css
@@ -3,7 +3,7 @@
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
-    background-color: #DBD4D3;
+    background-color: var(--gelo);
     color: #152536;
     overflow-wrap: normal;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
