--- a/front-end/src/components/SideBar/sideBar.css
+++ b/front-end/src/components/SideBar/sideBar.css
@@ -8,9 +8,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100vw;
     z-index: 999;
-    transition: all 0.3s;
     padding: 1rem;
 }
 
