--- a/front-end/src/components/Header/header.css
+++ b/front-end/src/components/Header/header.css
@@ -8,9 +8,12 @@
 }
 
 .perfil{
-    display: none;
+
 }
 
+.dropdown-menu{
+    left: -100px;
+}
 
 .pesquisar__button:hover{
     border-color: #020202;
