--- a/front-end/src/components/SideBar/sideBar.css
+++ b/front-end/src/components/SideBar/sideBar.css
@@ -27,7 +27,7 @@
     top: 5px;
 }
 
-a {
+.nav__item a {
     color: black;
     font-size: 1.1rem;
     text-decoration: none;
@@ -35,6 +35,10 @@ a {
 
 .nav__item{
     margin-top: 24px;
+}
+
+.nav__item span{
+    margin-left: 5px;
 }
 
 .active{
