--- a/front-end/src/pages/Player/player.css
+++ b/front-end/src/pages/Player/player.css
@@ -17,6 +17,7 @@
     height: 360px;
     background-color: var(--gelo);
     box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
 }
 
 .player__capa{
@@ -42,20 +43,20 @@
 
 .player__perfil-content{
     display: flex;
-    width: 540px;
+    width: 550px;
     padding: 1.5rem;
+    font-weight: 500;
 }
 
 .player__perfil-detalhes{
     margin: 0 10px;
+
 }
 
 
 .player__like{
     width: 32px;
     height: 32px;
-    margin-top: 25px;
-    margin-left: 200px;
 }
 
 
@@ -71,5 +72,24 @@
 }
 
 .player__progress{
-    width: 720px;
+    width: 700px;
+    height: 10px;
+    padding: 3px;
 }
+
+.icone{
+    border-color: transparent;
+    background-color: transparent;
+}
+
+.curtir{
+    margin-top: 25px;
+    margin-left: 200px;
+}
+
+
+.icone__playlist{
+    transform: scale(2);
+    margin-left: 5px;
+}
+
